# uk-address

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ukaddress/: models.py  parser.py  tokens.py
src/ukaddress_ner/: __init__.py  cli.py  models.py  parser.py  postcode.py  tokens.py
src/ukaddress_ner/data/lookups/: localities.csv
src/ukaddresskit/: __init__.py  cli.py  locality.py  models.py  parser.py  pipeline.py  postcode.py  tokens.py
src/ukaddresskit/data/lookups/: locality_to_town.csv  outcode_to_county.csv  synonyms.csv
tests/: test_basic.py  test_postcode.py
