[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "uk-address"
version = "0.0.1"
authors = [
  { name="Usama Shahid", email="usamashahid.us8@gmail.com" },
]
description = "UK address parser and named entity recognition (NER) using machine learning with utilities."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["NER", "addresses", "UK", "CRF", "pycrfsuite", "postcode"]

dependencies = [
  "python-crfsuite>=0.9.11",
  "lxml>=6.0.1",
  "pandas>=2.0.0",
  "platformdirs>=4.2.2",
]

[project.optional-dependencies]
train = ["sklearn-crfsuite>=0.3.6", "scikit-learn>=1.3"]
dev = ["pytest>=7.4", "ruff>=0.5.6", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/reachusama/uk-address"
Issues   = "https://github.com/reachusama/uk-address/issues"

[project.scripts]
uk-address = "ukaddress.cli:main"
ukaddress  = "ukaddress.cli:main" # alias

[tool.hatch.build.targets.wheel]
packages = ["src/ukaddress"]

[tool.hatch.build]
include = [
  "src/ukaddress/data/**",
  "src/ukaddress/data/models/**",
]
exclude = [
  "**/__pycache__/**",
  "**/.DS_Store",
  "**/*.py[cod]",
  "**/*$py.class",
  ".env"
]