[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ukaddresskit"
version = "0.0.4"
authors = [
  { name="Usama Shahid", email="usamashahid.us8@gmail.com" },
]
maintainers = [
  {name = "Usama Shahid", email = "usamashahid.us8@gmail.com"}
]
description = "UK address utility based on machine learning and optimised search to parse, standardise, and compare addresses."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["parsing", "NER" ,"addresses", "UK", "postcode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

dependencies = [
  "python-crfsuite>=0.9.7,<=0.9.11",
  "lxml>=4.9,<6",
  "pandas>=2.0.0",
  "platformdirs>=4.2.2",
]

[project.optional-dependencies]
train = ["sklearn-crfsuite>=0.3.6", "scikit-learn>=1.3"]
dev = ["pytest>=7.4", "ruff>=0.5.6", "mypy>=1.10", "isort", "black"]

[project.urls]
Homepage = "https://github.com/reachusama/ukaddresskit"
Issues   = "https://github.com/reachusama/ukaddresskit/issues"

[project.scripts]
ukaddresskit = "ukaddresskit.cli:main"

# Wheel: include the package (and optionally the data)
[tool.hatch.build.targets.wheel]
packages = ["src/ukaddresskit"]
include = [
  "src/ukaddresskit/data/**",
  "src/ukaddresskit/data/models/**",
]
exclude = [
  "src/__pycache__/**",
  "src/**/__pycache__/**",
  "src/**/*.py[co]",
  "src/**/*.pyo",
]

# sdist: include source & top-level files
[tool.hatch.build.targets.sdist]
include = [
  "src/ukaddresskit/**",
  "README.md",
  "LICENSE",
]
exclude = [
  "**/__pycache__/**",
  "**/.DS_Store",
  ".env"
]